# reqres-api-tests

./: .env.example  .gitignore  README.md  pyproject.toml
reqres_api_tests/: client.py  utils.py
reqres_api_tests/schemas/: account.py  resources.py  users.py
reqres_api_tests/schemas/request/: account.py  users.py
reqres_api_tests/schemas/response/: account.py  resources.py  users.py
tests/: conftest.py  test_login.py  test_register.py  test_resources.py  test_users.py
